Added empty apache config files and correct playbook after trigger.

--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install apache.
-  host: all
+  hosts: all
+  become: true
 
   tasks:
     # - name: Install apache.
@@ -11,6 +12,7 @@
           - httpd
           - httpd-devel
         state: present
+
     # - name: Copy config files.
     #   command: >
     #     cp httpd.conf /etc/httpd/conf/httpd.conf
@@ -19,7 +21,7 @@
     - name: Copy config files.
       copy:
         src: "{{ item.src }}"
-        dest: "{{ item.['dest'] }}"
+        dest: "{{ item.dest }}"
         owner: root
         group: root
         mode: 0644
@@ -28,10 +30,12 @@
           dest: /etc/httpd/conf/httpd.conf
         - src: httpd-vhosts
           dest: /etc/httpd/conf/httpd-vhosts.conf
+
     # - name: Restart and configure apache.
     #   command: service httpd start
     # - command: chkconfig httpd on
     - name: Ensure Apache is started and at boot.
-      service: httpd
-      state: started
-      enabled: true
+      service: 
+        name: httpd
+        state: started
+        enabled: true
